fix h1 left margin on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,7 @@
 h1.single-title {
     color: var(--color-text);
     font-size: 40px;
+    margin-left: 0;
 }
 
 .subtitle {
